Trying to fix iphone overlapping footer issues

--- a/static/booking/css/custom-v1.12.7.css
+++ b/static/booking/css/custom-v1.12.7.css
@@ -13,7 +13,7 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 40px;
+  margin-bottom: 60px;
   width: 100%;
   background-color: transparent;
   font-family: "Helvetica Neue", Arial, sans-serif;
@@ -25,8 +25,8 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 40px;
-  /*line-height: 40px; !* Vertically center the text there *!*/
+  height: 60px;
+  /*line-height: 60px; !* Vertically center the text there *!*/
   background-color: transparent;
 }
 
